Update JRE and GC strategy (#96)
* Init version 1.14.5

* Update JRE and GC strategy