@@ -4,4 +4,4 @@
 
 java \
     -Dspring.profiles.active=prod \
-    -Xms512m -Xmx1024m -jar target/*.jar
+    -Xms512m -Xmx1024m -XX:+UseZGC -XX:+ZGenerational -jar target/*.jar
